# MentalHealthBotProject

./: AISProjectMentalHealthAI.rar  config.json  guiMain.py  main.py  pyproject.toml  readme.md  requirements.txt  textToSpeechMainDemo.py
MentalHealthBot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dataFiles/: AIconfig.json  UTSAHealthServicesJSON.rar  rTemplate.json  resource_0.json  resource_1.json  resource_2.json  resource_3.json  resource_4.json  resource_5.json  resources_2.json  universalInstruction.json
modules/: clearConsole.py  countResources.py  menu.py  parseOpenAIKey.py  parseUserInput.py
openAI/: AI.py  AItextToSpeech.py
webScraper/: scheduleScrapers.py
