[project]
name = "MentalHealthBot"
version = "v1"
dependencies = ["openai","importlib", "pathlib", "requests", "datetime", "speechrecognition", "pyaudio", "pyttsx3", "gTTS"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["scheduleParser"]